--- a/jade/index.jade
+++ b/jade/index.jade
@@ -28,12 +28,18 @@ html
             
         -  var places = [{ name: "Hawaii", date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="}]
         -  places.push({name: "Hawaii", date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
+        -  places.push({name: "Hawaii", date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
+        -  places.push({name: "Hawaii", date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
+        -  places.push({name: "Hawaii", date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
+        -  places.push({name: "Hawaii", date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
+        -  places.push({name: "Hawaii", date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
+        -  places.push({name: "Hawaii", date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
         
-        .places
-        each p in places
-            div.place
-                .img(style="background-image: url(#{p.src});")
-                h3 #{p.name} – #{p.date}
+        .places.js-places
+            each p in places
+                div.place
+                    .img.js-place(data-src="#{p.src}")
+                    h3 #{p.name} – #{p.date}
     
     
         
