--- a/sass/base.scss
+++ b/sass/base.scss
@@ -36,6 +36,22 @@ h2 {
     font: {
         size: 1rem;
     }
+
+    a, a:visited {
+        padding-bottom: 2px;
+        border-bottom: 1px solid $grey;
+
+        color: $grey;
+        text-decoration: none;
+
+        cursor: pointer;
+        @include transition(border-color ease .5s, color ease .5s);
+
+        &:hover {
+            border-color: $red;
+            color: $red;
+        }
+    }
 }
 
 hr {
@@ -49,23 +65,12 @@ hr {
     }
 }
 
-a, a:visited {
-    padding-bottom: 2px;
-    border-bottom: 1px solid $grey;
+.place, .place:visited {
+    display: block;
 
-    color: $grey;
     text-decoration: none;
+    color: default;
 
-    cursor: pointer;
-    @include transition(border-color ease .5s, color ease .5s);
-
-    &:hover {
-        border-color: $red;
-        color: $red;
-    }
-}
-
-.place {
     cursor: pointer;
 
     .img {
@@ -99,6 +104,8 @@ a, a:visited {
     }
 
     &:hover {
+
+        text-decoration: none;
 
         .img {
             opacity: .8;
