--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,45 +1,22 @@
-doctype
-html
-  head
-    title Vagabond - Adrien Cadet
+include pics
+include header
 
-    meta(charset = 'utf-8')
-    meta(content = 'IE=edge;chrome=1', "http-equiv"= 'X-UA-Compatible')
-    meta(name='viewport', content = 'width=device-width, initial-scale=1')
-    meta(name= 'description', content = "Down to Earth. Going out to change my galaxy.")
-    meta(name= 'keywords', content = 'Adrien, Cadet, travel, pictures, photos, hope, beauty, life')
++header('.')
 
-    link(rel='stylesheet', type='text/css', href= 'all.css')
-    link(href="https://fonts.googleapis.com/css?family=BioRhyme|Lato", rel="stylesheet")
-
-    script(src= 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js', type= 'text/javascript')
-    script(src= 'all.js', type= 'text/javascript')
-    script(type= 'text/javascript').
-      var presenter = new IndexPresenter()
-  body
-    section.index
-        h1 Vagabond
+section.index
+    h1 Vagabond
+    
+    h2 All these images are my property.
+        | Interested in using them? &#8239;
+        a(href='https://github.com/acadet/vagabond/issues') Open a ticket here.
         
-        h2 All these images are my property.
-            | Interested in using them? &#8239;
-            a(href='https://github.com/acadet/vagabond/issues') Open a ticket here.
-            
-        hr
-            
-        -  var places = [{ name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="}]
-        -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
-        -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
-        -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
-        -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
-        -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
-        -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
-        -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
+    hr
         
-        .places.js-places
-            each p in places
-                a.place(href='#{p.folder}')
-                    .img.js-img(data-src="#{p.src}")
-                    h3 #{p.name} – #{p.date}
+    .places.js-places
+        each p in places
+            a.place(href='#{p.folder}')
+                .img.js-img(data-src="#{p.src}")
+                h3 #{p.name} – #{p.date}
     
     
         
