--- a/jade/header.jade
+++ b/jade/header.jade
@@ -13,7 +13,7 @@ mixin header(path)
         link(rel='stylesheet', type='text/css', href= '#{path}/all.css')
         link(href="https://fonts.googleapis.com/css?family=BioRhyme|Lato", rel="stylesheet")
 
-        script(src= 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js', type= 'text/javascript')
+        script(src= 'https://cdn.jsdelivr.net/g/rxjs@4.1.0(rx.all.compat.js),jquery@3.2.1(jquery.slim.min.js)', type='text/javascript')
         script(src= '#{path}/all.js', type= 'text/javascript')
         script(type= 'text/javascript').
           var presenter = new IndexPresenter()
