--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,7 +1,7 @@
 include pics
 include header
 
-+header('.')
++header('.', 'Index')
 
 section.index
     h1 Vagabond
@@ -18,6 +18,4 @@ section.index
                 .img.js-img(data-src="#{p.src}")
                 h3 #{p.name} – #{p.date}
     
-    
-        
-    
+include footer
