--- a/sass/base.scss
+++ b/sass/base.scss
@@ -12,11 +12,16 @@ body {
     overflow: auto;
 
     margin: 0;
-    padding: 2rem;
-    @include box-sizing(border-box);
+    padding: 0;
 
     text-align: center;
     @include fontLato();
+}
+
+section {
+    width: 100%;
+    padding: 2rem;
+    @include box-sizing(border-box);
 }
 
 h1 {
@@ -72,4 +77,18 @@ hr {
     }
 
     box-shadow: 0 4px 0 -2px $light-grey;
+}
+
+footer {
+    width: 100%;
+    display: inline-block;
+
+    text-align: right;
+
+    background-color: $light-grey;
+
+    p {
+        padding: 1rem;
+        color: $black;
+    }
 }
