--- a/jade/insight.jade
+++ b/jade/insight.jade
@@ -9,5 +9,5 @@ mixin insight(place)
         
         .places.js-places
             - for (var i = 1; i <= place.size; i++)
-                .img.js-img(data-src="#{i}.jpg")
+                .img.js-img(data-src="../imgs/#{place.folder}/#{i}.jpg")
         
