--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -1,6 +1,6 @@
 - var places = []
-- var HAWAII = {name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg=", size: 5}
--  places.push(hawaii)
+- var HAWAII = {name: "Hawaii", folder: 'hawaii', date: "Mar 2017", size: 5};
+-  places.push(HAWAII)
 -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
 -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
 -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
