--- a/sass/insight.scss
+++ b/sass/insight.scss
@@ -6,13 +6,12 @@
     .img {
         width: 100%;
         height: 100%;
-        padding: 1rem;
+        margin: 0 1rem;
         max-width: 100%;
         max-height: 100%;
-        @include box-sizing(border-box);
 
         @media all and (min-width: $laptop) {
-            padding: 2rem;
+            margin: 0 2rem;
         }
     }
 }
