--- a/jade/header.jade
+++ b/jade/header.jade
@@ -8,7 +8,11 @@ mixin header(path, presenter)
         meta(content = 'IE=edge;chrome=1', "http-equiv"= 'X-UA-Compatible')
         meta(name='viewport', content = 'width=device-width, initial-scale=1')
         meta(name= 'description', content = "Down to Earth. Going out to change my galaxy.")
-        meta(name= 'keywords', content = 'Adrien, Cadet, travel, pictures, photos, hope, beauty, life')
+        meta(name= 'keywords', content = 'Adrien, Cadet, travel, pictures, photos, hope, beauty, life, world')
+        
+        link(rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32")
+        link(rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16")
+
 
         link(rel='stylesheet', type='text/css', href= '#{path}/all.css')
         link(href="https://fonts.googleapis.com/css?family=BioRhyme|Lato", rel="stylesheet")
