--- a/jade/index.jade
+++ b/jade/index.jade
@@ -15,5 +15,5 @@ block content
         .places.js-places
             each p in places
                 a.place(href='#{p.folder}')
-                    .img.js-img(data-src="imgs/#{p.folder}/1.jpg")
+                    .img.js-img(data-src="imgs/#{p.folder}/#{p.highlight}.jpg")
                     h3 #{p.name} – #{p.date}
