--- a/sass/insight.scss
+++ b/sass/insight.scss
@@ -3,15 +3,14 @@
         margin: 3rem 1rem 1rem 1rem;
     }
 
-    .img {
-        width: 100%;
-        height: 100%;
-        margin: 0 1rem;
+    img {
+        width: 70%;
+        margin: 1rem 0;
         max-width: 100%;
         max-height: 100%;
+        display: inline-block;
 
-        @media all and (min-width: $laptop) {
-            margin: 0 2rem;
-        }
+        background-color: $light-grey;
+        box-shadow: 0 10px 0 -6px $light-grey;
     }
 }
