--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -1,5 +1,5 @@
 - var places = []
-- var HAWAII = {name: "Hawaii", folder: 'hawaii', date: "Mar 2017", size: 15, highlight: 5};
+- var HAWAII = {name: "Hawaii", folder: 'hawaii-2017', date: "Mar 2017", size: 15, highlight: 5};
 -  places.push(HAWAII)
 -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
 -  places.push({name: "Hawaii", folder: 'hawaii', date: "Mar 2017", src: "https://images.unsplash.com/photo-1437652633673-cc02b9c67a1b?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=&bg="})
