--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -5,3 +5,6 @@
 
 - var TUSCON = {name: "Tuscon", folder: 'tuscon-2017', date: "Feb 2017", size: 9, highlight: 9};
 -  places.push(TUSCON)
+
+- var DC = {name: "Washington DC", folder: 'dc-2016', date: "Nov 2016", size: 17, highlight: 11};
+-  places.push(DC)
