--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -8,3 +8,6 @@
 
 - var DC = {name: "Washington DC", folder: 'dc-2016', date: "Nov 2016", size: 17, highlight: 11};
 -  places.push(DC)
+
+- var SEATTLE = {name: "Seattle", folder: 'seattle-2016', date: "Nov 2016", size: 18, highlight: 6};
+-  places.push(SEATTLE)
