--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -11,3 +11,6 @@
 
 - var SEATTLE = {name: "Seattle", folder: 'seattle-2016', date: "Nov 2016", size: 18, highlight: 6};
 -  places.push(SEATTLE)
+
+- var SPAIN = {name: "Spain & Portugal", folder: 'spain-portugal-2016', date: "May 2016", size: 23, highlight: 13};
+-  places.push(SPAIN)
