--- a/sass/insight.scss
+++ b/sass/insight.scss
@@ -3,6 +3,12 @@
         margin: 3rem 1rem 1rem 1rem;
     }
 
+    h2.link {
+      margin-bottom: 0;
+
+      text-align: left;
+    }
+
     img {
         width: 70%;
         margin: 1rem 0;
