--- a/jade/insight.jade
+++ b/jade/insight.jade
@@ -2,6 +2,8 @@ mixin insight(place)
     +header('../', 'Insight')
 
     section.insight
+        h2.link
+          a(href='../') &#8592; Back Home
         h1 #{place.name} 
         h2 #{place.date}
         
