--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -14,3 +14,6 @@
 
 - var SPAIN = {name: "Spain & Portugal", folder: 'spain-portugal-2016', date: "May 2016", size: 23, highlight: 13};
 -  places.push(SPAIN)
+
+- var CHICAGO = {name: "Chicago", folder: 'chicago-2015', date: "Mar 2015", size: 3, highlight: 3};
+-  places.push(CHICAGO)
