--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -17,3 +17,6 @@
 
 - var CHICAGO = {name: "Chicago", folder: 'chicago-2015', date: "Mar 2015", size: 3, highlight: 3};
 -  places.push(CHICAGO)
+
+- var NYC = {name: "New York City", folder: 'nyc-2015', date: "Mar 2015", size: 5, highlight: 3};
+-  places.push(NYC)
