Add Arizona road trip

--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -15,6 +15,9 @@
 - var SPAIN = {name: "Spain & Portugal", folder: 'spain-portugal-2016', date: "May 2016", size: 23, highlight: 13};
 -  places.push(SPAIN)
 
+- var ARIZONA = {name: "Arizona - Utah - Nevada - California", folder: 'arizona-2015', date: "May 2015", size: 16, highlight: 3};
+-  places.push(ARIZONA)
+
 - var CHICAGO = {name: "Chicago", folder: 'chicago-2015', date: "Mar 2015", size: 3, highlight: 3};
 -  places.push(CHICAGO)
 
