--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -23,3 +23,6 @@
 
 - var NYC = {name: "New York City", folder: 'nyc-2015', date: "Mar 2015", size: 5, highlight: 3};
 -  places.push(NYC)
+
+- var SF = {name: "San Francisco", folder: 'sf-2015', date: "Feb 2015", size: 18, highlight: 18};
+-  places.push(SF)
