--- a/jade/pics.jade
+++ b/jade/pics.jade
@@ -1,5 +1,8 @@
 - var places = []
 
+- var BALI = {name: "Bali", folder: 'bali-2017', date: "Apr 2017", size: 29, highlight: 24};
+-  places.push(BALI)
+
 - var HAWAII = {name: "Hawaii", folder: 'hawaii-2017', date: "Mar 2017", size: 15, highlight: 5};
 -  places.push(HAWAII)
 
