Add Tuscon locations

--- a/jade/places.jade
+++ b/jade/places.jade
@@ -19,6 +19,7 @@
 -  places.push(HAWAII)
 
 - var TUSCON = {name: "Tuscon", folder: 'tuscon-2017', date: "Feb 2017", size: 9, highlight: 9};
+- TUSCON.locations = range(1, 9, {name: "Tuscon", lat: 32.221743, lng: -110.926479});
 -  places.push(TUSCON)
 
 - var DC = {name: "Washington DC", folder: 'dc-2016', date: "Nov 2016", size: 17, highlight: 11};
