--- a/jade/places.jade
+++ b/jade/places.jade
@@ -23,6 +23,12 @@
 -  places.push(TUSCON)
 
 - var DC = {name: "Washington DC", folder: 'dc-2016', date: "Nov 2016", size: 17, highlight: 11};
+- var dc = {name: "Washington DC", lat: 38.907192, lng: -77.036871};
+- var whiteHouse = {name: "White House", lat: 38.897676, lng: -77.036530};
+- var lincoln = {name: "Lincoln Memorial", lat: 38.889269, lng: -77.050176};
+- var mall = {name: "National Mall", lat: 38.889620, lng: -77.022977};
+- var capitol = {name: "Capitol", lat: 38.889947, lng: -77.009053};
+- DC.locations = flatten([range(1, 1, whiteHouse), range(2, 2, dc), range(3, 3, lincoln), range(4, 4, mall), range(5, 5, lincoln), range(6, 13, mall), range(14, 14, capitol), range(15, 17, dc)]);
 -  places.push(DC)
 
 - var SEATTLE = {name: "Seattle", folder: 'seattle-2016', date: "Nov 2016", size: 18, highlight: 6};
