Add Spain locations

--- a/jade/insight.jade
+++ b/jade/insight.jade
@@ -16,5 +16,5 @@ mixin insight(place)
                 if place.locations
                   - var l = place.locations[i - 1]
                   p.description 
-                    a(href='https://www.google.com/maps/?q=#{l.lat},#{l.lng}') &#9737; #{l.name}
+                    a(href='https://www.google.com/maps/?q=#{l.lat},#{l.lng}') #{l.name}
         
