--- a/jade/places.jade
+++ b/jade/places.jade
@@ -38,6 +38,16 @@
 -  places.push(SEATTLE)
 
 - var SPAIN = {name: "Spain & Portugal", folder: 'spain-portugal-2016', date: "May 2016", size: 23, highlight: 13};
+- var bilbao = {name: "Bilbao", lat: 43.263013, lng: -2.934985};
+- var picos = {name: "Picos de Europa", lat: 43.187216, lng: -4.821524};
+- var cudillero = {name: "Cudillero", lat: 43.560002, lng: -6.148421};
+- var douro = {name: "Douro Valley", lat: 41.083621, lng: -7.796087};
+- var cascais = {name: "Cascais", lat: 38.696757, lng: -9.420744};
+- var cabo = {name: "Cabo da Roca", lat: 38.780417, lng: -9.498885};
+- var cordoba = {name: "Cordoba", lat: 37.888175, lng: -4.779383};
+- var sevilla = {name: "Sevilla", lat: 37.389092, lng: -5.984459};
+- var alcazar = {name: "Real Alcázar de Sevilla", lat: 37.383052, lng: -5.990226};
+- SPAIN.locations = flatten([range(1, 1, bilbao), range(2, 5, picos), range(6, 9, cudillero), range(10, 10, douro), range(11, 11, cascais), range(12, 13, cabo), range(14, 17, cordoba), range(18, 18, sevilla), range(19, 23, alcazar)]);
 -  places.push(SPAIN)
 
 - var ARIZONA = {name: "Arizona - Utah - Nevada - California", folder: 'arizona-2015', date: "May 2015", size: 16, highlight: 3};
