--- a/jade/places.jade
+++ b/jade/places.jade
@@ -61,10 +61,14 @@
 -  places.push(ARIZONA)
 
 - var CHICAGO = {name: "Chicago", folder: 'chicago-2015', date: "Mar 2015", size: 3, highlight: 3};
-- var CHICAGO.locations = range(1, 1, {name: "Chicago", lat: 41.878114, lng: -87.629798});
+- CHICAGO.locations = range(1, 3, {name: "Chicago", lat: 41.878114, lng: -87.629798});
 -  places.push(CHICAGO)
 
 - var NYC = {name: "New York City", folder: 'nyc-2015', date: "Mar 2015", size: 5, highlight: 3};
+- var manhattan = {name: "Manhattan", lat: 40.783060, lng: -73.971249};
+- var empire = {name: "Empire State Building", lat: 40.748541, lng: -73.985758};
+- var chrysler = {name: "Chrysler Building", lat: 40.751621, lng: -73.975502};
+- NYC.locations = flatten([range(1, 3, manhattan), [empire, chrysler]]);
 -  places.push(NYC)
 
 - var SF = {name: "San Francisco", folder: 'sf-2015', date: "Feb 2015", size: 18, highlight: 18};
