Add SF locations

--- a/jade/places.jade
+++ b/jade/places.jade
@@ -72,4 +72,7 @@
 -  places.push(NYC)
 
 - var SF = {name: "San Francisco", folder: 'sf-2015', date: "Feb 2015", size: 18, highlight: 18};
+- var sfCity = {name: "San Francisco", lat: 37.774929, lng: -122.419416};
+- var alcatraz = {name: "Alcatraz", lat: 37.826977, lng: -122.422956};
+- SF.locations = flatten([range(1, 11, sfCity), range(12, 12, alcatraz), range(13, 18, sfCity)]);
 -  places.push(SF)
