--- a/sass/insight.scss
+++ b/sass/insight.scss
@@ -24,13 +24,13 @@
     }
 
     .description {
-        margin: 1rem;
+        margin: .5rem 1rem 1rem 1rem;
 
         a, a:visited {
             padding-bottom: 3px;
 
             text-decoration: none;
-            font-size: .9rem;
+            font-size: 1rem;
 
             color: $grey;
             border-bottom: 2px solid transparent;
