Upload costa rica and mexico

--- a/jade/places.jade
+++ b/jade/places.jade
@@ -2,6 +2,18 @@
 - function range(s, e, o) { var r = []; for (var i = s; i <= e; i++) { r.push(o); } return r; };
 - function flatten(a) { return [].concat.apply([], a); }
 
+- var MEXICO = {name: "Mexico", folder: 'mexico-2018', date: "Mar 2018", size: 35, highlight: 23};
+- var mexico_city = {name: "Mexico City", lat: 19.432608, lng: -99.133209};
+- var oaxaca = {name: "Oaxaca", lat: 17.060548, lng: -96.731873};
+- MEXICO.locations = flatten([range(1, 18, mexico_city), range(19, 35, oaxaca)]);
+-  places.push(MEXICO)
+
+- var COSTA_RICA = {name: "Costa Rica", folder: 'costa-rica-2017', date: "Dec 2017", size: 17, highlight: 15};
+- var liberia = {name: "Liberia", lat: 10.634596, lng: -85.440674};
+- var arenal = {name: "Arenal Volcano", lat: 10.461772, lng: -84.712830};
+- COSTA_RICA.locations = flatten([range(1, 7, liberia), range(8, 17, arenal)]);
+-  places.push(COSTA_RICA)
+
 - var BALI = {name: "Bali", folder: 'bali-2017', date: "Apr 2017", size: 29, highlight: 24};
 - var sanur = {name: "Sanur", lat: -8.707178, lng: 115.262624};
 - var uluwatu = {name: "Uluwatu Temple", lat: -8.829099, lng: 115.084877};
