--- a/jade/places.jade
+++ b/jade/places.jade
@@ -8,6 +8,14 @@
 - PALM_SPRINGS.locations = flatten([range(1, 9, palm_springs), range(10, 16, joshua), range(17, 19, palm_springs)]);
 -  places.push(PALM_SPRINGS)
 
+- var ITALY = {name: "Italy", folder: 'italy-2018', date: "Oct 2018", size: 37, highlight: 31};
+- var pisa = {name: "Pisa", lat: 43.7068074, lng: 10.3603586};
+- var cinqua_terre = {name: "Cinqua Terre", lat: 44.1238162, lng: 9.6563262};
+- var vatican = {name: "Vatican City", lat: 41.9038243, lng: 12.4476838};
+- var rome = {name: "Rome", lat: 41.9102415, lng: 12.3959117};
+- ITALY.locations = flatten([range(1, 1, pisa), range(2, 8, cinqua_terre), range(9, 11, rome), range(12, 20, vatican), range(21, 34, rome), range(35, 37, vatican)]);
+-  places.push(ITALY)
+
 - var MEXICO = {name: "Mexico", folder: 'mexico-2018', date: "Mar 2018", size: 35, highlight: 23};
 - var mexico_city = {name: "Mexico City", lat: 19.432608, lng: -99.133209};
 - var oaxaca = {name: "Oaxaca", lat: 17.060548, lng: -96.731873};
