--- a/sass/vars.scss
+++ b/sass/vars.scss
@@ -6,3 +6,9 @@ $red: #db4d4d;
 $phone: 768px;
 $tablet: 1024px;
 $laptop: 1300px;
+
+$half-space: .5rem;
+$one-space: 1rem;
+$two-space: 2rem;
+$three-space: 3rem;
+$four-space: 4rem;
