--- a/jade/header.jade
+++ b/jade/header.jade
@@ -15,7 +15,7 @@ mixin header(path, presenter)
 
 
         link(rel='stylesheet', type='text/css', href= '#{path}/all.css')
-        link(href="https://fonts.googleapis.com/css?family=BioRhyme|Lato", rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=BioRhyme|Bitter", rel="stylesheet")
 
         script(src= 'https://cdn.jsdelivr.net/g/rxjs@4.1.0(rx.all.compat.js),jquery@3.2.1(jquery.slim.min.js)', type='text/javascript')
         script(src= '#{path}/all.js', type= 'text/javascript')
