--- a/sass/base.scss
+++ b/sass/base.scss
@@ -6,6 +6,11 @@ a img {
     border: none;
 }
 
+body, section, footer {
+  width: 100%;
+  margin: 0;
+}
+
 body {
     width: 100%;
     height: 100%;
@@ -19,7 +24,6 @@ body {
 }
 
 section {
-    width: 100%;
     padding: 2rem;
     @include box-sizing(border-box);
 }
@@ -39,21 +43,7 @@ h2 {
         size: 1rem;
     }
 
-    a, a:visited {
-        padding-bottom: 2px;
-        border-bottom: 1px solid $grey;
 
-        color: $grey;
-        text-decoration: none;
-
-        cursor: pointer;
-        @include transition(border-color ease .5s, color ease .5s);
-
-        &:hover {
-            border-color: $red;
-            color: $red;
-        }
-    }
 }
 
 hr {
@@ -68,15 +58,54 @@ hr {
 }
 
 footer {
-    width: 100%;
-    display: inline-block;
-
-    text-align: right;
+    text-align: center;
+    padding: $two-space;
+    @include box-sizing(border-box);
 
     background-color: $light-grey;
 
-    p {
-        padding: 1rem 2rem;
+    h4, p {
+        margin: 0;
+
         color: $black;
+    }
+
+    h4 {
+      padding: 0;
+
+      @include fontBioRhyme();
+      font-size: 2rem;
+    }
+
+    hr {
+      width: 50%;
+      height: 3px;
+      margin: 0 auto $one-space auto;
+
+      background-color: $red;
+    }
+
+    p {
+      padding: $half-space;
+
+      font-size: 1rem;
+      @include fontBitter();
+      color: $black;
+
+      a, a:visited {
+          padding-bottom: 2px;
+          border-bottom: 1px solid $black;
+
+          color: $black;
+          text-decoration: none;
+
+          cursor: pointer;
+          @include transition(border-color ease .3s, color ease .3s);
+
+          &:hover {
+              border-color: $red;
+              color: $red;
+          }
+      }
     }
 }
