--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,5 +1,10 @@
+// TODO remove
 @mixin fontLato() {
     font-family: 'Lato', sans-serif;
+}
+
+@mixin fontBitter() {
+    font-family: 'Bitter', sans-serif;
 }
 
 @mixin fontBioRhyme() {
