--- a/jade/index.jade
+++ b/jade/index.jade
@@ -3,17 +3,15 @@ extends layout
 block content
     +header('.', 'Index')
 
-    section.index
-        h1 Vagabond
-        
-        h2 All these images are my property.
-            | Interested in using them? &#8239;
-            a(href='https://github.com/acadet/vagabond/issues') Open a ticket here.
-            
-        hr
-            
-        .places.js-places
-            each p in places
-                a.place(href='#{p.folder}')
-                    .img.js-img(data-src="imgs/#{p.folder}/#{p.highlight}.jpg")
-                    h3 #{p.name} – #{p.date}
+    header.index
+      h1 Vagabond.
+      
+    hr.index
+  
+    section.index.js-places
+      each p in places
+          a.entry.js-img(href='#{p.folder}', data-src="imgs/#{p.folder}/#{p.highlight}.jpg")
+            .titles
+              h2 #{p.name}
+              hr
+              h3 #{p.date}
