--- a/sass/vars.scss
+++ b/sass/vars.scss
@@ -2,6 +2,7 @@ $black: #3e3e3e;
 $light-grey: #eee;
 $grey: #6d6d6d;
 $red: #db4d4d;
+$white: #fff;
 
 $phone: 768px;
 $tablet: 1024px;
@@ -12,3 +13,7 @@ $one-space: 1rem;
 $two-space: 2rem;
 $three-space: 3rem;
 $four-space: 4rem;
+$five-space: 5rem;
+
+$fast-animation: ease .2s;
+$long-animation: ease .4s;
