--- a/pug/header.pug
+++ b/pug/header.pug
@@ -7,18 +7,18 @@ mixin header(path, presenter)
         meta(charset = 'utf-8')
         meta(content = 'IE=edge;chrome=1', "http-equiv"= 'X-UA-Compatible')
         meta(name='viewport', content = 'width=device-width, initial-scale=1')
-        meta(name= 'description', content = "Down to Earth. Going out to change my galaxy.")
-        meta(name= 'keywords', content = 'Adrien, Cadet, travel, pictures, photos, hope, beauty, life, world')
+        meta(name='description', content = "Down to Earth. Going out to change my galaxy.")
+        meta(name='keywords', content = 'Adrien, Cadet, travel, pictures, photos, hope, beauty, life, world')
         
         link(rel="icon" type="image/png" href="#{path}/favicon-32x32.png" sizes="32x32")
         link(rel="icon" type="image/png" href="#{path}/favicon-16x16.png" sizes="16x16")
 
 
-        link(rel='stylesheet', type='text/css', href= '#{path}/all.css')
+        link(rel='stylesheet', type='text/css', href=path + '/all.css')
         link(href="https://fonts.googleapis.com/css?family=BioRhyme|Bitter", rel="stylesheet")
 
         script(src= 'https://cdn.jsdelivr.net/g/rxjs@4.1.0(rx.all.compat.js),jquery@3.2.1(jquery.slim.min.js)', type='text/javascript')
-        script(src= '#{path}/all.js', type= 'text/javascript')
+        script(src= path + '/all.js', type= 'text/javascript')
         script(type= 'text/javascript').
           var presenter = new #{presenter}Presenter()
       body
