--- a/pug/header.pug
+++ b/pug/header.pug
@@ -15,7 +15,8 @@ mixin header(path, presenter)
 
 
         link(rel='stylesheet', type='text/css', href=path + '/all.css')
-        link(href="https://fonts.googleapis.com/css?family=BioRhyme|Bitter", rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=Bitter:regular,700&subset=latin", rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=BioRhyme:regular&subset=latin", rel="stylesheet")
 
         script(src= 'https://cdn.jsdelivr.net/g/rxjs@4.1.0(rx.all.compat.js),jquery@3.2.1(jquery.slim.min.js)', type='text/javascript')
         script(src= path + '/all.js', type= 'text/javascript')
