--- a/sass/insight.scss
+++ b/sass/insight.scss
@@ -1,45 +1,137 @@
-.insight {
-    h1 {
-        margin: 3rem 1rem 1rem 1rem;
+header.insight {
+  width: 100%;
+  height: 100%;
+  @include display(flex);
+  @include align-items(stretch);
+
+  border-bottom: 2px solid $light-grey;
+
+  .highlight, .headline {
+    @include flex(1);
+    margin: 0;
+  }
+
+  .highlight {
+    background: {
+      position: center center;
+      color:  $light-grey;
+      repeat: no-repeat;
+      size: cover;
     }
+  }
 
-    h2.link {
-      margin-bottom: 0;
+  .headline {
+    @include display(flex);
 
+    .headline-inside-wrapper {
+      margin: $one-space;
+      @include align-self(center);
       text-align: left;
+
+      h1 {
+        @include fontBitter();
+        font-size: 4rem;
+        color: $black;
+        margin: 0;
+      }
+
+      hr {
+        width: 50%;
+        height: 5px;
+        margin: $two-space 0;
+
+        background: $red;
+        border: none;
+      }
+
+      h2 {
+        margin: 0;
+
+        @include fontBitter();
+        font-size: 2rem;
+        color: $black;
+      }
     }
-
-    a.img {
-        display: block;
-
-        img {
-            width: 70%;
-            margin: 1rem 0 0 0;
-            max-width: 100%;
-            max-height: 100%;
-
-            background-color: $light-grey;
-            box-shadow: 0 10px 0 -6px $light-grey;
-        }
-    }
-
-    .description {
-        margin: .5rem 1rem 1rem 1rem;
-
-        a, a:visited {
-            padding-bottom: 3px;
-
-            text-decoration: none;
-            font-size: 1rem;
-
-            color: $grey;
-            border-bottom: 2px solid transparent;
-            @include transition(.5s ease border-color, .5s ease color);
-
-            &:hover {
-                border-color: $red;
-                color: $red;
-            }
-        }
-    }
+  }
 }
+
+section.insight {
+  h3 {
+    margin: $three-space $one-space $one-space $one-space;
+
+    @include fontBitter();
+    font-size: 3rem;
+    color: $black;
+  }
+
+  hr {
+    width: 70%;
+    height: 3px;
+    margin: 0 auto $one-space auto;
+
+    background: $red;
+    border: none;
+  }
+
+  .full, .combined {
+    width: 100%;
+    padding: $one-space 0;
+    @include box-sizing(border-box);
+  }
+
+  .combined {
+    @include display(flex);
+    @include align-items(stretch);
+    @include justify-content(space-between);
+
+    img {
+      @include flex(.8);
+    }
+  }
+}
+
+// .insight {
+//     h1 {
+//         margin: 3rem 1rem 1rem 1rem;
+//     }
+//
+//     h2.link {
+//       margin-bottom: 0;
+//
+//       text-align: left;
+//     }
+//
+//     a.img {
+//         display: block;
+//
+//         img {
+//             width: 70%;
+//             margin: 1rem 0 0 0;
+//             max-width: 100%;
+//             max-height: 100%;
+//
+//             background-color: $light-grey;
+//             box-shadow: 0 10px 0 -6px $light-grey;
+//         }
+//     }
+//
+//     .description {
+//         margin: .5rem 1rem 1rem 1rem;
+//
+//         a, a:visited {
+//             padding-bottom: 3px;
+//
+//             text-decoration: none;
+//             font-size: 1rem;
+//
+//             color: $grey;
+//             border-bottom: 2px solid transparent;
+//             @include transition(.5s ease border-color, .5s ease color);
+//
+//             &:hover {
+//                 border-color: $red;
+//                 color: $red;
+//             }
+//         }
+//     }
+// }
