Fix broken design

--- a/pug/footer.pug
+++ b/pug/footer.pug
@@ -1,8 +1,7 @@
 footer
     h4 V.
     hr
-    p All these images are my property.
-      | Interested in using them? &#8239;
+    p All these images are my property. Interested in using them? &#8239;
       a(href='https://github.com/acadet/vagabond/issues') Open a ticket here.
     p Adrien Cadet &#169; 2020
 
