--- a/sass/insight.scss
+++ b/sass/insight.scss
@@ -1,6 +1,6 @@
 header.insight {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   @include display(flex);
   @include align-items(stretch);
 
@@ -38,7 +38,7 @@ header.insight {
       hr {
         width: 50%;
         height: 5px;
-        margin: $two-space 0;
+        margin: $one-space 0;
 
         background: $red;
         border: none;
@@ -75,6 +75,7 @@ section.insight {
 
   .full, .combined {
     width: 100%;
+    max-width: 1160px;
     padding: $one-space 0;
     @include box-sizing(border-box);
   }
