Fix combined layout

--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -15,7 +15,13 @@
     groups: [
       {
         name: "Palm Springs",
-        pictures: range(1, 9).concat(range(17, 19))
+        //pictures: range(1, 9).concat(range(17, 19))
+        pictures: [
+          1,
+          [2, 3],
+          17,
+          [18, 19]
+        ]
       },
       {
         name: "Joshua Tree National Park",
