Support responsive for combined

--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -15,7 +15,6 @@
     groups: [
       {
         name: "Palm Springs",
-        //pictures: range(1, 9).concat(range(17, 19))
         pictures: [
           1,
           [2, 3],
@@ -24,8 +23,24 @@
         ]
       },
       {
+        name: "Indian Canyons",
+        pictures: [
+          4,
+          [5, 6],
+          8,
+          9,
+          7
+        ]
+      },
+      {
         name: "Joshua Tree National Park",
-        pictures: range(10, 16)
+        pictures: [
+          12,
+          11,
+          [10, 15],
+          13,
+          [16, 14]
+        ]
       }
     ]
   }
