--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -55,15 +55,41 @@
     groups: [
       {
         name: "Pisa",
-        pictures: range(1, 1)
+        pictures: [1]
       },
       {
-        name: "Cinqua Terre",
-        pictures: range(2, 8)
+        name: "Cinque Terre",
+        pictures: [
+          2,
+          [3, 6],
+          4,
+          7,
+          [5, 8]
+        ]
       },
       {
-        name: "Rome",
-        pictures: range(9, 11).concat(range(21, 34))
+        name: "Roma",
+        pictures: [
+          [10, 11],
+          9,
+          [12, 13],
+          17,
+          18,
+          [14, 15],
+          19,
+          [16, 20],
+          35,
+          [36, 37],
+          23,
+          [22, 24],
+          [21, 25],
+          31,
+          [29, 30],
+          33,
+          32,
+          [27, 28],
+          34
+        ]
       },
       {
         name: "Vatican",
