--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -98,20 +98,58 @@
     ]
   }
 
+-
+  entries["mexico"] = {
+    name: "Mexico",
+    folder: "mexico-2018",
+    short_date: "Mar 2018",
+    long_date: "March 2018",
+    highlight: 23,
+    groups: [
+      {
+        name: "Mexico City",
+        pictures: [
+          10,
+          [8, 11],
+          1,
+          [3, 4],
+          18,
+          9,
+          [2, 5],
+          [6, 7],
+          12,
+          13,
+          14
+        ]
+      },
+      {
+        name: "Teotihuacan Pyramids",
+        pictures: [
+          16,
+          15,
+          17
+        ]
+      },
+      {
+        name: "Oaxaca City",
+        pictures: [
+          21,
+          [19, 20],
+          22,
+          [26, 25],
+          [28, 29],
+          27,
+          [30, 31],
+          24,
+          23,
+          32,
+          [34, 33],
+          35
+        ]
+      }
+    ]
+  }
 
-//- - var ITALY = {name: "Italy", folder: 'italy-2018', date: "Oct 2018", size: 37, highlight: 31};
-//- - var pisa = {name: "Pisa", lat: 43.7068074, lng: 10.3603586};
-//- - var cinqua_terre = {name: "Cinqua Terre", lat: 44.1238162, lng: 9.6563262};
-//- - var vatican = {name: "Vatican City", lat: 41.9038243, lng: 12.4476838};
-//- - var rome = {name: "Rome", lat: 41.9102415, lng: 12.3959117};
-//- - ITALY.locations = flatten([range(1, 1, pisa), range(2, 8, cinqua_terre), range(9, 11, rome), range(12, 20, vatican), range(21, 34, rome), range(35, 37, vatican)]);
-//- -  places.push(ITALY)
-//- 
-//- - var MEXICO = {name: "Mexico", folder: 'mexico-2018', date: "Mar 2018", size: 35, highlight: 23};
-//- - var mexico_city = {name: "Mexico City", lat: 19.432608, lng: -99.133209};
-//- - var oaxaca = {name: "Oaxaca", lat: 17.060548, lng: -96.731873};
-//- - MEXICO.locations = flatten([range(1, 18, mexico_city), range(19, 35, oaxaca)]);
-//- -  places.push(MEXICO)
 //- 
 //- - var COSTA_RICA = {name: "Costa Rica", folder: 'costa-rica-2017', date: "Dec 2017", size: 17, highlight: 15};
 //- - var liberia = {name: "Liberia", lat: 10.634596, lng: -85.440674};
