--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -182,6 +182,29 @@
       }
     ]
   }
+  
+-
+  entries["bali"] = {
+    name: "Bali",
+    folder: "bali-2017",
+    short_date: "Apr 2017",
+    long_date: "April 2017",
+    highlight: 24,
+    groups: [
+      {
+        name: "Sanur",
+        pictures: range(1, 9)
+      },
+      {
+        name: "Uluwatu Temple",
+        pictures: range(10, 13)
+      },
+      {
+        name: "Ubud",
+        pictures: range(14, 29)
+      }
+    ]
+  }
 
 //- - var BALI = {name: "Bali", folder: 'bali-2017', date: "Apr 2017", size: 29, highlight: 24};
 //- - var sanur = {name: "Sanur", lat: -8.707178, lng: 115.262624};
